# Backend/swagger.json
@@ -54,7 +54,10 @@
         ],
         "responses": {
           "200": {
-            "description": "userExist로 로그인 성공/실패 판별"
+            "description": "로그인 성공 시, success, userExist, session 객체 반환  \n 로그인 실패 시, success: false, userExist: false 반환"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -77,7 +80,13 @@
         ],
         "responses": {
           "200": {
-            "description": "  200 - 유저가 이미 존재하면 userExist : true, success : false 반환,  \n200 - 성공적으로 회원가입 성공시, success : true 반환"
+            "description": "  200 - 유저가 이미 존재하면 userExist, success: false,  \n200 - 성공적으로 회원가입 성공시 success"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -91,7 +100,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "  200 - 성공적으로 로그아웃 성공 시, success : true 반환  \n200 - 로그인 상태 아닐 시, success: false, isLogined: false 반환"
+            "description": "  200 - 성공적으로 로그아웃 성공 시, success 반환  \n200 - 로그인 상태 아닐 시, success: false, isLogined: false 반환"
           }
         }
       }
@@ -148,12 +157,15 @@
           },
           "403": {
             "description": "type이 professor가 아닌 경우"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/subject/join": {
-      "post": {
+      "put": {
         "tags": [
           "Subject"
         ],
@@ -180,10 +192,13 @@
         ],
         "responses": {
           "200": {
-            "description": "성공시 success, subject 객체 반환,  \n해당하는 코드의 강의가 없을 시, success: false, codeValidation: false 반환,  \n이미 참여한 수업일 경우, success: false, subjectExist: ture 반환"
+            "description": "성공시 success, subject 객체 반환,  \n해당하는 코드의 강의가 없을 시, success: false, codeValidation: false 반환,  \n이미 참여한 수업일 경우, success: false, subjectExist 반환"
           },
           "401": {
             "description": "user가 로그인이 되지 않은 경우"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -296,16 +311,7 @@
             "in": "body",
             "type": "object",
             "schema": {
-              "type": "object",
-              "properties": {
-                "lectureId": {
-                  "type": "number",
-                  "example": 0
-                }
-              },
-              "required": [
-                "lectureId"
-              ]
+              "$ref": "#/definitions/closeLecture"
             }
           }
         ],
@@ -318,6 +324,44 @@
           },
           "403": {
             "description": "type이 professor가 아닌 경우"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/subject/lecture/get/inProgress": {
+      "get": {
+        "tags": [
+          "Subject"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "type": "object",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "subjectId": {
+                  "type": "number",
+                  "example": 0
+                }
+              },
+              "required": [
+                "subjectId"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "현재 진행중인 수업이 있을 경우, existInProgressLecture, lecture 객체 반환  \n없을 경우, existInProgressLecture: false 반환"
+          },
+          "401": {
+            "description": "user가 로그인이 되지 않은 경우"
           },
           "500": {
             "description": "Internal Server Error"
@@ -392,10 +436,40 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "진행중인 수업이 있으면, success: true, existInProgressLecture: true, lecture 객체 반환,  \n없으면, success: false, existInProgressLecture: false 반환"
+            "description": "진행중인 수업이 있으면, success, existInProgressLecture, lecture 객체 반환,  \n없으면, success: false, existInProgressLecture: false 반환"
           },
           "401": {
             "description": "user가 로그인이 되지 않은 경우"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/lecture/join/{id}": {
+      "put": {
+        "tags": [
+          "Lecture"
+        ],
+        "description": "lectureId로 수업 참가",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "진행중인 수업이 있으면, existLecture, lecture 객체 반환"
+          },
+          "401": {
+            "description": "user가 로그인이 되지 않은 경우"
+          },
+          "404": {
+            "description": "해당하는 lectureId의 lecture가 존재하지 않음"
           },
           "500": {
             "description": "Internal Server Error"
@@ -497,6 +571,51 @@
           "items": {
             "type": "number"
           }
+        }
+      }
+    },
+    "closeLecture": {
+      "type": "object",
+      "properties": {
+        "question": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "lecture": {
+                "type": "number",
+                "example": 0
+              },
+              "questioner": {
+                "type": "string",
+                "example": "김민건"
+              },
+              "questionContent": {
+                "type": "string",
+                "example": "아 몰랑 안해"
+              },
+              "answers": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "respondent": {
+                      "type": "string",
+                      "example": "최민우"
+                    },
+                    "content": {
+                      "type": "string",
+                      "example": "아 나도 몰랑 안해"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "lectureId": {
+          "type": "number",
+          "example": 0
         }
       }
     }
